@@ -11,7 +11,15 @@ import edu.colorado.phet.common.phetcommon.model.clock.IClock;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 
 /**
- * Model of a circuit with a battery and N capacitors in parallel.
+ * Model of a circuit with a battery (B) and N capacitors (ci) in parallel.
+ * <p/>
+ * <code>
+ * |-----|------|------|
+ * |     |      |      |
+ * B     c1     c2    c3
+ * |     |      |      |
+ * |-----|------|------|
+ * </code>
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
