@@ -1,3 +1,5 @@
+5/17/11 attempt to show circuit layouts in javadoc
+5/17/11 add circuits for series-parallel combinations
 5/17/11 tweak plate size and capacitor spacing so that 3 series and parallel capacitors fit in the play area
 5/17/11 add parallel circuits
 5/17/11 populate series circuit with capacitors
